# projekty

./: main.py
Web_Python/Zadanie3/: Balagan.py  factorize.py  pyproject.toml
Web_Python/Zadanie_2/: Dockerfile  assistant_bot.py  pyproject.toml
Web_Python/Zadanie_5/: main.py  pyproject.toml
Web_Python/Zadanie_6/: Zadanie_6.py  pyproject.toml  students_database.db
Web_Python/Zadanie_9/: scraper.py
Zadanie 11/: main.py
Zadanie 11 i 12/: main.py
Zadanie domowe modul 10/: zadanie domowe 10.py
Zadanie domowe modul 9/: zadanie domowe 9.py
Zadanie domowe moduł 7/clean_folder/: setup.py
Zadanie domowe moduł 8/: zadanieDomowe8.py
Zadanie domowe moduł6/: sort.py
