[tool.poetry]
name = "assistent-bot"
version = "0.1.0"
description = ""
authors = ["Grzegorz Piwowarczyk"]
readme = "README.md"
packages = [{include = "assistent_bot"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
