[tool.poetry]
name = "zadanie-5"
version = "0.1.0"
description = ""
authors = ["Grzegorz Piwowarczyk <grzegorz.piwowarczyk@schibsted.com>"]
readme = "README.md"
packages = [{include = "zadanie_5"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

